--- a/package.json
+++ b/package.json
@@ -3,11 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "node server.js",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint",
-    "deploy": "vercel --prod"
+    "start": "NODE_ENV=production node server.js"
   },
   "dependencies": {
     "@react-three/drei": "^9.105.4",
